src/objects/dupcheck__dc3Duplicate__c.object
<CustomObject>
    <label>Duplicate Check Duplicate</label>
    <nameField>
        <displayFormat>DUP{0000000000}</displayFormat>
        <label>Duplicate Check Duplicate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>dupcheck__Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__Group__c</fullName>
        <formula>dupcheck__dcGroup__r.dupcheck__group__c</formula>
        <label>Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__HasError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Match Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MatchAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Match Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>MatchCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Match Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MatchContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchFilterValue__c</fullName>
        <externalId>true</externalId>
        <label>Match Filter Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Match Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>MatchLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchObject__c</fullName>
        <externalId>true</externalId>
        <label>Match Object</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchOpportunity2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>MatchOpportunity2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>**DO NOT USE**</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>MatchOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchOwner__c</fullName>
        <externalId>true</externalId>
        <label>Match Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchRecordType__c</fullName>
        <externalId>true</externalId>
        <label>Match Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__ScenarioScore__c</fullName>
        <label>Scenario Scores</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SourceAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SourceCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SourceContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceFilterValue__c</fullName>
        <externalId>true</externalId>
        <label>Source Filter Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>SourceLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceObject__c</fullName>
        <externalId>true</externalId>
        <label>Source Object</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceOpportunity2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SourceOpportunity2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>**DO NOT USE**</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SourceOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceOwner__c</fullName>
        <externalId>true</externalId>
        <label>Source Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceRecordType__c</fullName>
        <externalId>true</externalId>
        <label>Source Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dcGroup__c</fullName>
        <label>Duplicate Check Group</label>
        <referenceTo>dupcheck__dcGroup__c</referenceTo>
        <relationshipLabel>Duplicate Check Duplicates</relationshipLabel>
        <relationshipName>Duplicate_Check_Duplicates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dupcheck__dcJob__c</fullName>
        <label>Duplicate Check Job</label>
        <referenceTo>dupcheck__dcJob__c</referenceTo>
        <relationshipLabel>Duplicate Check Duplicates</relationshipLabel>
        <relationshipName>Duplicate_Check_Duplicates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dupcheck__doNotCount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__handled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handled</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>